--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -80,6 +80,7 @@
   .section-nav {
     position: fixed;
     width: 100%;
+    z-index: 99999;
 
     .nav {
       position: relative;
